# site_sucker

./: .gitignore  .pre-commit-config.yaml  .vulture.whitelist  AGENTS.md  README.md  package.json  pd2.ps1  pyproject.toml  run_tests.bat  run_tests.ps1  settings.json  settings.jsonc  site_sucker.ps1
.github/workflows/: ci.yml  complexity.yml
docs/: 2026-04-30-sitesucker-universal-wiki-site-downloader.md  2026-05-02-beautifulsoup4-refactor-replace-html-regex-with-dom-parsing.md  2026-05-02-final-resume-spec-all-review-flaws-traps-fixed.md  2026-05-02-fix-internal-resource-link-rewriting-for-resume-mode.md  2026-05-02-fix-missing-css-import-discovery-in-bfs-resume-crawler.md  2026-05-02-fix-phpbb-duplicate-crawling-regex-bug-reject-patterns.md  2026-05-02-implement-1-txt-recommendations.md  2026-05-02-implement-refactor-txt-improvements.md  2026-05-03-dry-refactor-complexity-reduction-and-unified-progress-tracking.md  2026-05-03-reduce-crawl-logs-add-wget-stderr-logging.md  2026-05-03-refactoring-plan-reduce-complexity-and-improve-testability.md  2026-05-03-refactoring-plan-reduce-complexity-improve-testability.md  2026-05-03-replace-wget-subprocess-with-requests-session-in-resume-crawler.md  2026-05-03-shared-url-extraction-for-resume-repair-5.md  2026-05-03-sitesucker-refactoring-plan.md  BeautifulSoup.md
src/: Get-ExternalMedia.ps1  Get-WgetPath.ps1  Invoke-SiteMirror.ps1  New-WgetArgs.ps1  Repair-ExternalLinks.ps1  Repair-OfflineHtml.ps1  SiteSucker.psm1  Write-SiteReport.ps1
src/site_sucker/: __init__.py  __main__.py  crawler.py  download.py  file_iter.py  media.py  mirror.py  paths.py  progress.py  repair_css.py  repair_html.py  repair_links.py  repair_offline.py  replacement_pipeline.py  report.py  resume.py  settings.py  url_filter.py  validate_html.py  wget.py
tests/: conftest.py  test_file_iter.py  test_main.py  test_media.py  test_mirror.py  test_repair_links.py  test_repair_offline.py  test_replacement_pipeline.py  test_report.py  test_resume.py  test_settings.py  test_url_filter.py  test_validate_html.py  test_wget.py
